IKASAN-2707 Rely on core for actuatorRefreshAtUrl, minor documentation updates, additional tests.